# pyimg2txt

./: .gitignore  pyproject.toml
pyimg2txt/: __init__.py  config.py  pyimg2txt.py
tests/: test_pyimg2txt.py
