[tool.poetry]
name = "pyimg2txt"
version = "0.1.0"
description = ""
authors = ["Hiroyuki Ikuno <sam2kaikaramegusuri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"
Pillow = "^9.2.0"
pyocr = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
